# engine

./: .gitignore  CMakeLists.txt  engine.cpp
Cmake/: CMakeCache.txt  Makefile  cmake_install.cmake
engine/src/board/: board.cpp  board.hpp
gui/: README.md  main.py  test.py
gui/.nicegui/: storage-user-4902e476-23b9-4e10-9637-4c41ee49c8ad.json  storage-user-fe4563e2-9d66-4c6c-be92-74323f2e41f2.json
test/board/: test.cpp
test/individual_functions_test/: Set_board_fen.cpp  positions.txt
